# EcoSIM

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Legal.txt  Makefile  README.md  build_ATS-EcoSIM.sh  build_EcoSIM.sh  nc_config  run_docker.sh
3rd-partylibs/: CMakeLists.txt
drivers/ATSEcoSIM/: ATSEcoSIM_test.F90  CMakeLists.txt
drivers/aquachem/: AquaSaltChemMod.F90  AquachemMod.F90  CMakeLists.txt  aquachem.F90
drivers/boxsbgc/: CMakeLists.txt  ChemMod.F90  ForcTypeMod.F90  MicIDMod.F90  batchmod.F90  batchsbgc.F90
drivers/boxshared/: CMakeLists.txt  ChemIDMod.F90
drivers/ecosim/: CMakeLists.txt  EcoSIMAPI.F90  ecosim.F90
drivers/mockbatch/: CMakeLists.txt  MockMod.F90  mockdriver.F90
drivers/plantbgc/: CMakeLists.txt  PlantMod.F90  plantdriver.F90
drivers/tools/: CMakeLists.txt  ClimReader.F90  ClimTransformer.F90  GridReader.F90  HFileTest.F90  NamelistTest.F90  PlantManagementReader.F90  SoilManagementReader.F90  SoilWarmReadTest.F90  etimerTest.F90  restartTest.F90
f77src/driver/: CMakeLists.txt  main.f  readme.md  readnamelist.f  readnml.f  regressiontest.f  rgress.f  soil.f
f77src/ecosim_init/: CMakeLists.txt  StartsMod.f  blk10.h  blk12b.h  blk13c.h  blk13d.h  blk16.h  blk19a.h  blk19b.h  blk19c.h  blk20f.h  blk6.h  blk8a.h  blk8b.h  blkc.h
f77src/ecosys_mods/: CMakeLists.txt  DayMod.f  ErosionMod.f  ExecMod.f  ExtractMod.f  GrosubMod.f  HfuncMod.f  Hour1Mod.f  NitroMod.f  RedistMod.f  SoluteMod.f  StarteMod.f  StartqMod.f  StartsMod.f  StomateMod.f  TrnsfrMod.f  TrnsfrsMod.f  UptakeMod.f  VisualMod.f  WatsubMod.f  WthrMod.f
f77src/ecosys_src/: CMakeLists.txt  day.f  erosion.f  exec.f  extract.f  grosub.f  hfunc.f  hour1.f  nitro.f  readi.f  readme.md  reads.f  redist.f  solute.f  starte.f  startq.f  starts.f  stomate.f  trnsfr.f  trnsfrs.f  uptake.f  visual.f  watsub.f  wthr.f
f77src/ioutils/: CMakeLists.txt  blk10.h  blk11a.h  blk12a.h  blk13a.h  blk13b.h  blk15b.h  blk18a.h  blk19d.h  blk1cr.h  blk1n.h  blk1s.h  blk21b.h  blk22a.h  blk22c.h  blk2a.h  blk2b.h  blk2c.h  blk5.h  blk9a.h  blk9c.h  blkc.h  filec.h  foutp.f  fouts.f  outpd.f  outph.f  outsd.f  outsh.f  readi.f  readq.f  reads.f  routp.f  routq.f  routs.f  split.f  splitc.f  woutp.f  woutq.f  wouts.f
f90src/: CMakeLists.txt  readme.md
f90src/APIData/: CMakeLists.txt  PlantAPIData.F90
f90src/APIs/: CMakeLists.txt  GeochemAPI.F90  MicBGCAPI.F90  PlantAPI.F90  PlantAPI4Uptake.F90  PlantCanAPI.F90  PlantMod.F90  SoluteAPI.F90  SurfPhysAPI.F90
f90src/ATSUtils/: ATSCPLMod.F90  ATSEcoSIMAdvanceMod.F90  ATSEcoSIMInitMod.F90  ATSUtilsMod.F90  BGC_containers.F90  CMakeLists.txt  SharedDataMod.F90  c_f_interface_module.F90  ecosim_wrappers.F90
f90src/Balances/: CMakeLists.txt  ErosionBalMod.F90  LateralTranspMod.F90  RedistDataMod.F90  RedistMod.F90  RunoffBalMod.F90  SoilLayerDynMod.F90  TFlxTypeMod.F90  TillageMixMod.F90
f90src/DebugTools/: CMakeLists.txt  DebugToolMod.F90
f90src/Disturbances/: CMakeLists.txt  EcosysWarmingMod.F90  ErosionMod.F90  FertilizerMod.F90  FireMod.F90  PerturbationMod.F90  PlantDisturbMod.F90  SoilDisturbMod.F90
f90src/Ecosim_datatype/: AqueChemDatatype.F90  BalanceCheckDataType.F90  CMakeLists.txt  CanopyDataType.F90  CanopyRadDataType.F90  ChemTranspDataType.F90  ClimForcDataType.F90  EcoSIMCtrlDataType.F90  EcoSIMHistMod.F90  EcoSimSumDataType.F90  EcosimBGCFluxType.F90  FertilizerDataType.F90  FlagDataType.F90  GridDataType.F90  IrrigationDataType.F90  LandSurfDataType.F90  MLDataDiagType.F90  MicrobialDataType.F90  NumericalAuxMod.F90  PlantDataRateType.F90  PlantMgmtDataType.F90  PlantTraitDataType.F90  PlantTraitTableMod.F90  RootDataType.F90  SOMDataType.F90  SedimentDataType.F90  SnowDataType.F90  SoilBGCDataType.F90  SoilHeatDataType.F90  SoilPhysDataType.F90  SoilPropertyDataType.F90  SoilWaterDataType.F90  SurfLitterDataType.F90  SurfSoilDataType.F90  readme.md
f90src/Ecosim_mods/: CMakeLists.txt  ExecMod.F90  InitAllocMod.F90  StarteMod.F90  StartqMod.F90  StartsMod.F90  VisualMod.F90  readme.md
f90src/Geochem/: CMakeLists.txt
f90src/HydroTherm/: CMakeLists.txt
f90src/IOutils/: CMakeLists.txt  ClimReadMod.F90  ForcWriterMod.F90  HistDataType.F90  HistFileMod.F90  MicrobeInfoMod.F90  PlantInfoMod.F90  ReadManagementMod.F90  RestartMod.F90  bhistMod.F90  readimod.F90  readme.md  readsmod.F90  restUtilMod.F90
f90src/Main/: CMakeLists.txt  EcoSIMDesctruct.F90  InitEcoSIM.F90
f90src/Mesh/: CMakeLists.txt  GridConsts.F90  GridMod.F90
f90src/Microbial_bgc/: CMakeLists.txt
f90src/Minimath/: CMakeLists.txt  LinearAlgebraMod.F90  MiniFuncMod.F90  MiniMathMod.F90
f90src/ModelDiags/: BalancesMod.F90  CMakeLists.txt  HydrologyDiagMod.F90  MLDataDiagMod.F90  MicrobialDiagMod.F90  SoilDiagMod.F90  SoilDiagsMod.F90
f90src/Modelconfig/: CMakeLists.txt  EcoSIMConfig.F90  EcoSIMCtrlMod.F90  EcoSIMSolverPar.F90  ElmIDMod.F90  TracerIDMod.F90
f90src/Modelforc/: CMakeLists.txt  DayMod.F90  Hour1Mod.F90  WthrMod.F90  YearMod.F90
f90src/Modelpars/: CMakeLists.txt  ChemTracerParsMod.F90  EcoSiMParDataMod.F90  GrosubPars.F90  MicBGCPars.F90  MicrobeConfigMod.F90  NitroPars.F90  PlantBGCPars.F90  SoluteParMod.F90  TracerPropMod.F90
f90src/Plant_bgc/: CMakeLists.txt  CanopyCondsMod.F90  ExtractsMod.F90  GrosubsMod.F90  InitPlantMod.F90  InitVegBGC.F90  LitterFallMod.F90  NoduleBGCMod.F90  NutUptakeMod.F90  PhotoSynsMod.F90  PlantBalMod.F90  PlantBranchMod.F90  PlantDebugMod.F90  PlantDisturbByFireMod.F90  PlantDisturbByGrazingMod.F90  PlantDisturbByTillageMod.F90  PlantDisturbsMod.F90  PlantMathFuncMod.F90  PlantNonstElmDynMod.F90  PlantPhenolMod.F90  PrescribePhenolMod.F90  RadiationDataMod.F90  RootGasMod.F90  RootMod.F90  StartqMod.F90  StomatesMod.F90  SurfaceRadiationMod.F90  UptakePars.F90  UptakesMod.F90
f90src/Prescribed_pheno/: CMakeLists.txt  PrescribePhenolMod.F90
f90src/SoilHydroTherm/: CMakeLists.txt  SoilHydroParaMod.F90  WatsubDataMod.F90  WatsubMod.F90  WatsubPars.F90
f90src/Utils/: CMakeLists.txt  EcoSimConst.F90  ModelStatusType.F90  StrToolsMod.F90  TestMod.F90  abortutils.F90  clock.c  data_kind_mod.F90  (+4 more)
(+1883 files in other folders)
